--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -9,20 +9,12 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
 
       - name: Setup Node
         uses: actions/setup-node@main
         with:
           node-version: "16.x"
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
 
       - run: npm install
       - run: npm run build
