--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "vue": "^3.2.31"
   },
   "devDependencies": {
